<resources>
    <string name="app_name">TestQQ</string>
    <string name="information_footer">消息</string>
    <string name="linkman_footer">联系人</string>
    <string name="setting_up_footer">设置</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
</resources>
