<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/homepage_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7" >
        <FrameLayout
            android:id="@+id/homepage_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/homepage_information_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/information_footer"
            android:layout_weight="1"
            android:background="@color/colorWhite"/>
        <Button
            android:id="@+id/homepage_linkman_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/linkman_footer"
            android:layout_weight="1"
            android:background="@color/colorWhite"/>
        <Button
            android:id="@+id/homepage_setting_up_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_up_footer"
            android:layout_weight="1"
            android:background="@color/colorWhite"/>

    </LinearLayout>
</LinearLayout>